	- adjusted makefile for Windows linking - no longer requires library files to be specified explicitly
	- updated copyright
	- removed references to specific library versions from README
	- adjusted author name
	- added missing IN_LIBXML define in create_image_xml.c
	- changed libmxl2 includes to angle-brackets
	- removed unnecessary bundled iconv
	- increased size of driver_info.bioses
	- added assertions to insertions into fixed sized arrays - disabled when SANITIZE is set

0.75
    - fixed some Clang warnings
    - added CMake support
    - added .gitignore
    - added .clang-tidy
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings
    - added some missing pointer checks
    - fixed Visual Studio compilation issues
    - added README.md and CONFIG.md (based on the MESS Wiki documentation)
    - temporarily re-added iconv files to allow Visual Studio compilation
    - fixed MinGW compilation
    - removed obsolete create_release.bat and kzip.exe
    - removed dirent.h from distribution and fetch it in Visual Studio CMake build instead
    - updated dirent.h to 1.23.2
    - updated copyright year
    - removed Visual Studio files as they can be generated via CMake
    - use conan for external dependencies on Windows
    - removed external libraries from distribution
    - add CMake option "USE_CONAN" to specify if conan should be used for external dependencies (defaults to ON on Windows and OFF on all other platforms)
    - properly include external includes
    - use static libraries on Windows
    - adjusted library dependencies
    - updated libxml2 to 2.9.9 (conan only)
    - add some more "xpath_expr" examples to mame_regtest.xml

    create_report
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings

    create_image_xml
    - fixed some CLion inspection warnings